--- a/layouts/about/about.html
+++ b/layouts/about/about.html
@@ -1,20 +1,20 @@
 {{ define "main" }}
 <div class="uk-section uk-margin-medium-top">
-    <div class="uk-container">
+    <div class="uk-container uk-container-small">
         <div uk-grid>
-            <div class="uk-width-1-3@s">
-                <div class="uk-card">
-                    <h2>How your website is built matters <span class="accent">a lot</span></h2>
+            <div class="uk-width-1-1@s">
+                <div class="uk-card uk-text-center uk-margin-large-bottom">
+                    <h2>Our goal is to create the most modern and easy website usability based on user interaction</h2>
                 </div>
-            </div>
-            <div class="uk-width-1-3@s">
-                <div class="uk-card">
-                    <p class="uk-text-default">Located in Orange County, California - Hungry Ram started with a vision of delivering high-performance websites to businesses at affordable prices, while maintaining superior support.</p>
-                </div>
-            </div>
-            <div class="uk-width-1-3@s">
-                <div class="uk-card">
-                    <p class="uk-text-default">Real estate web design was the initial focus. But many client referrals crossed nationwide through various businesses, so the decision to help other industries expanded our reach.</p>
+                <div class="uk-flex uk-flex-center">
+                    <div class="uk-width-2xlarge">
+                        <p>Hungry Ram Web Design is a small studio founded by Ram Dettmer located in Yorba Linda, CA. We are a team of web designers and graphic designers with a passion for anything tech. There is a never a day where we never stop learning and this has helped us stand out from larger agencies.</p>
+                        <h3 class="uk-h4">How is Hungry Ram doing things differently?</h3>
+                        <p>We have achieved success by moving away from the direction most agencies were going towards - building on Wordpress, or any other website builders out there. Website builders allow for easy customization without having to touch code which allows agencies to deliver faster designs.</p>
+                        <p>Back in 2018, we learned that there was a new way to build faster and more secure websites that only experienced independent developers had adopted, and that way was using the jamstack architecture. So we decided to utilize this method and give our clients the upperhand. Jamstack sites are essentially hand coded from scratch without the need for a database, resulting in a much more secure and faster website.</p>
+                        <h3 class="uk-h4">Why the name Hungry Ram?</h3>
+                        <p>It all started with a joke from a friend that the founder, Ram was always hungry and loved cooking, so he purchased the domain hungryram.com. But Hungry Ram came to be more than just a hungry founder. Hungry Ram could mean you're hungry for success, hungry to reach your goals, and that was how Hungry Ram came to be. Helping businesses in the digital world who are hungry for success became one of our best achievements.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -29,13 +29,13 @@
         <div class="uk-flex uk-flex-middle uk-flex-center">
             <div class="uk-width-large">
                 <div class="uk-card-body">
-                    <h2>Following important web industry standards</h2>
-                    <p>As technology and Googles search algorithm changes, so should your website. While there are many factors in website development, these are the most crucial</p>
+                    <h2>We're small but growing!</h2>
+                    <p>Our growth comes from our amazing clients who refer us to their friends and family because they love working with us!</p>
                     <ul class="uk-list">
-                        <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>SEO for search engines</li>
-                        <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>Responsive Design for any device</li>
-                        <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>Schema to help Google identify your business</li>
-                        <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>SSL certificate for security</li>
+                        <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>We have the experience</li>
+                        <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>Delivering quality web designs</li>
+                        <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>The best support you will receive</li>
+                        <li><span uk-icon="icon: check" class="uk-margin-small-right"></span>We keep your site updated</li>
                     </ul>
                 </div>
             </div>
@@ -47,7 +47,7 @@
         <div class="uk-width-1-1 uk-flex uk-flex-center uk-margin-medium-bottom">
             <div class="uk-width-large uk-text-center">
                 <h2 class="uk-margin-remove uk-text-bold">Client Testimonials</h2>
-                <p>Clients nationwide spreading referrals and positive feedback!</p>
+                <p>Clients across the country spreading referrals and positive feedback!</p>
             </div>
         </div>
         <div class="uk-position-relative uk-visible-toggle" tabindex="-1" uk-slider>
