--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,6 +2,7 @@
 {{ partial "home/hero" . }}
 {{ partial "home/icons" . }}
 {{ partial "home/second-home" . }}
+{{ partial "home/services" . }}
 {{ partial "home/image-banner" . }}
 {{ partial "home/work" . }}
 {{ partial "global/closing" . }}
