--- a/layouts/partials/global/closing.html
+++ b/layouts/partials/global/closing.html
@@ -1,4 +1,4 @@
-<div class="uk-section" style="background:#F5F5F5">
+<div class="uk-section uk-section-small" style="background:#F5F5F5">
     <div class="uk-container">
         <div class="uk-width-1-1 uk-flex uk-flex-center">
             <div class="uk-width-large uk-text-center">
