--- a/layouts/partials/home/icons.html
+++ b/layouts/partials/home/icons.html
@@ -2,9 +2,9 @@
     <div class="uk-container">
         <div class="uk-flex uk-flex-center">
             <div class="uk-width-2xlarge">
-                <div class="uk-text-center uk-margin-medium-bottom">
-                    <h2>We build websites using only the best web development tools</h2>
-                    <p>Hungry Ram is a small web design studio in Yorba Linda, California. Clients choose us because our sites does not rely on website builders like Wordpress and Wix. We focus on coding all our sites from scratch to ensure optimal website speed and security. Every website we build is unique to your business!</p>
+                <div class="uk-margin-large-bottom">
+                    <h2 class="uk-text-center">We build websites using only the best web development tools</h2>
+                    <p class="uk-text-left">Hungry Ram is a small web design studio in Yorba Linda, California. We initially started helping businesses in Orange County grow their brand online, now our services has expanded across the country. Clients not only love our work but our top-notch support we provide.</p>
                     <p></p>
                 </div>
             </div>
