--- a/layouts/categories/list.html
+++ b/layouts/categories/list.html
@@ -1,14 +1,21 @@
 {{ define "main" }}
 <div class="uk-section">
-    <div class="uk-container">
+    <div class="uk-container uk-container-small">
         <div>
-            <ul class="uk-child-width-1-2@s uk-child-width-1-3@s" uk-grid uk-height-match="target: .uk-card">
+            <ul class="uk-child-width-1-2@s uk-grid-small" uk-grid uk-height-match="target: .uk-card">
                 {{ range .Pages }}
                 <li>
-                    <div class="uk-card uk-card-default">
+                    <div class="uk-card">
+                        {{ if .Params.featured_image }}
+                        <div class="uk-card-media-top uk-cover-container">
+                            <canvas height="400"></canvas>
+                            <img src="{{ .Params.featured_image }}" alt="{{ .Params.image_alt_tag }}" uk-cover>
+                        </div>
+                        {{ end }}
                         <div class="uk-card-body more-projects" style="padding: 30px 25px">
-                            <h3 class="uk-h4">{{ .Title }}</h3>
-                            <a href="{{ .Permalink }}" class="link-black"><span class="uk-text-middle uk-text-bold">View More</span><span href="#" uk-icon="icon: chevron-right" class="uk-margin-small-right"></span></a>
+                            <h3 class="uk-h5">{{ .Title }}</h3>
+                            <p>{{ .Summary | truncate 100 }}</p>
+                            <a href="{{ .Permalink }}" class="link-black"><span class="uk-text-middle uk-text-bold accent">View post</span><span href="#" uk-icon="icon: arrow-right" class="uk-margin-small-left"></span></a>
                         </div>
                     </div>
                 </li>
