--- a/layouts/partials/global/head.html
+++ b/layouts/partials/global/head.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{.Site.BaseURL}}css/styles.min.css">
+    <link rel="stylesheet" href="{{.Site.BaseURL}}css/styles.css">
     {{ partial "global/seo2" . }}
     {{ if .IsHome }}
     {{ partial "global/schema" . }}
     {{ end }}
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.8/dist/css/uikit.min.css" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
