--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -11,7 +11,7 @@
             {{ if $hero.heading }}
             <h2 class="uk-text-default uk-white">{{ $hero.body }}</h2>
             {{ end }}
-            <a href="#modal-signup" class="uk-button-primary uk-button" uk-toggle>Free Estimate</a>
+            <a href="#modal-signup" class="uk-button-primary uk-button" uk-toggle>Learn more</a>
         </div>
     </div>
     
