--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,10 +1,10 @@
 /* TYPOGRAPHY */
 
 body {
-    font-size: 16.5px;
-    font-family: 'Catamaran', sans-serif;
+    font-size: 16px;
+    font-family: 'Poppins', sans-serif;
     font-weight: 400;
-    line-height: 1.7em;
+    line-height: 1.8em;
 }
 
 body h1,
@@ -20,6 +20,19 @@ body .uk-h1, body .uk-h2, body .uk-h3, body .uk-h4, body .uk-h5, body .uk-h6, bo
 
 body em {
     color: #666;
+}
+
+html body {
+    color: #5a5a5a;
+}
+
+.md__content a {
+    color: #2196f3;
+    text-decoration: underline;
+}
+
+ul.uk-breadcrumb>*>* {
+    color: #fff;
 }
 
 /* OVERWRITE */
@@ -105,7 +118,7 @@ form textarea.uk-textarea {
     background-color: #fff!important;
     color: #000!important;
     font-family: 'Poppins', sans-serif!important;
-    padding: 25px;
+    padding: 20px;
 }
 
 form select.uk-select {
@@ -117,8 +130,9 @@ form select.uk-select {
 
 form input.uk-input::placeholder,
 form textarea.uk-textarea::placeholder {
-    color: #000!important;
+    color: rgb(105, 105, 105)!important;
     font-family: 'Poppins', sans-serif!important;
+    font-size: 15px;
 
 }
 
@@ -330,6 +344,29 @@ div.process-step span {
     width: 1.6em;
     z-index: 1;
     position: relative;
+}
+
+.service__list {
+    transition: .3s;
+    border: 1px solid #eee;
+}
+
+.service__list:hover h3 {
+    transition: .3s;
+}
+
+.service__list:hover,
+.service__list:hover a {
+    background: #2196f3;
+    transition: .3s;
+    text-decoration: none;
+}
+
+.service__list:hover h3,
+.service__list:hover svg,
+.service__list:hover p {
+    transition: .3s;
+    color: #fff;
 }
 
 /* FOOTER */
