--- a/layouts/partials/home/services.html
+++ b/layouts/partials/home/services.html
@@ -1,8 +1,10 @@
 <div class="uk-section">
     <div class="uk-container">
-        <div class="uk-width-2xlarge">
-            <h2>Providing you the best web design service</h2>
-            <p>Hungry Ram provides a fast response time and unlimited revisions to your website. We pride ourselves in delivering you the fastest support whether text, email, or phone we are here to help.</p>
+        <div class="uk-flex uk-flex-center">
+            <div class="uk-width-2xlarge uk-text-center">
+                <h2>Providing you the best web design service</h2>
+                <p>Hungry Ram provides a fast response time and unlimited revisions to your website. We pride ourselves in delivering you the fastest support whether text, email, or phone we are here to help.</p>
+            </div>
         </div>
         <div class="uk-child-width-1-3@s uk-text-left uk-grid-collapse uk-margin-large-top" uk-grid>
             {{ range where .Site.RegularPages "Type" "services" }}
