--- a/layouts/partials/global/head.html
+++ b/layouts/partials/global/head.html
@@ -42,10 +42,10 @@
 </head>
 <body id="body">
 <!-- Messenger Chat Plugin Code -->
-<div id="fb-root"></div>
+<!-- <div id="fb-root"></div> -->
 
 <!-- Your Chat Plugin code -->
-<div id="fb-customer-chat" class="fb-customerchat">
+<!-- <div id="fb-customer-chat" class="fb-customerchat">
 </div>
 
 <script>
@@ -67,4 +67,4 @@ window.fbAsyncInit = function() {
   js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));
-</script>
+</script> -->
