--- a/layouts/partials/global/head.html
+++ b/layouts/partials/global/head.html
@@ -39,6 +39,7 @@
     /></noscript> -->
     <!-- End Facebook Pixel Code -->
 <meta name="p:domain_verify" content="b15e511810919a03ae9922c7a08289b4"/>
+<meta name="google-site-verification" content="wAmNl-djcf7naDnLrCdiVHUTwj-WKZsKANYRmhFJXXA" />
 </head>
 <body id="body">
 <!-- Messenger Chat Plugin Code -->
