--- a/layouts/partials/home/icons.html
+++ b/layouts/partials/home/icons.html
@@ -5,7 +5,9 @@
                 <div class="uk-margin-large-bottom">
                     <h2 class="uk-text-center">We build websites using only the best web development tools</h2>
                     <p class="uk-text-left">Hungry Ram is a small web design studio in Yorba Linda, California. We initially started helping businesses in Orange County grow their brand online, now our services has expanded across the country. Clients not only love our work but our top-notch support we provide.</p>
-                    <p></p>
+                    <div class="uk-text-center">
+                        <a href="/about" class="uk-button uk-button-primary uk-text-center">About us</a>
+                    </div>
                 </div>
             </div>
         </div>
