--- a/layouts/partials/global/schema.html
+++ b/layouts/partials/global/schema.html
@@ -15,11 +15,11 @@
         "telephone": "657-549-5082",
         "name": "Hungry Ram",
         "logo": "https://res.cloudinary.com/hungryram19/image/upload/v1606809089/hungryram/favicon_wbz1ng.jpg",
-        "description": "Based in Orange County, providing the best websites for real estate and small businesses using modern tools to make your website faster and more secure",
+        "description": "Orange County web design for real estate professionals and small businesses.",
         "geo": {
             "@type": "GeoCoordinates",
-            "latitude": null,
-            "longitude": null
+            "latitude": 33.87521697227549,
+            "longitude": -117.74577287142314
         },
         "url": "https://www.hungryram.com",
         "contactPoint": {
@@ -28,8 +28,21 @@
             "contactType": "customer service",
             "email": "ram@hunryram.com",
             "contactOption": "",
-            "areaServed": "",
-            "availableLanguage": null
+            "areaServed": {
+                "@type": "GeoCircle",
+                "geoMidpoint": {
+                    "@type": "GeoCoordinates",
+                    "latitude": 33.87521697227549,
+                    "longitude": -117.74577287142314
+                },
+                "geoRadius": 1000
+            },
+            "availableLanguage": [
+                {
+                    "@type": "Language",
+                    "name": "English"
+                }
+            ],
         },
         "address": {
             "@type": "PostalAddress",
