--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,6 +1,26 @@
   
 {{ partial "global/head" . }}
 
+{{ if .Params.locations }}
+
+<div class="uk-cover-container uk-flex uk-flex-center uk-flex-middle" uk-height-viewport="offset-bottom:35" style="background: #090909" uk-grid>    
+    <div class="uk-position-top full-nav-wrapper" style="z-index: 1;">
+        {{ partial "global/navbar" . }}
+    </div>
+    <div class="hero-text uk-white uk-width-3-5@s uk-text-center uk-flex uk-flex-center uk-margin-large-top" style="margin-left:15px;margin-right: 15px;">
+        <div class="uk-width-1-1@s">
+            {{ if .Params.heading }}
+            <h1 class="uk-text-bold heading uk-margin-remove uk-white uk-h2" style="color: #fff;">{{ .Params.heading }}</h1>
+            {{ end }}
+            {{ if .Params.heading }}
+            <p class="uk-text-default uk-white">{{ .Params.body }}</p>
+            {{ end }}
+        </div>
+    </div>
+    
+</div>
+
+{{ else }}
 <div class="uk-background-cover uk-panel uk-flex uk-flex-center uk-flex-middle page-banner" style="background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(https://res.cloudinary.com/hungryram19/image/upload/v1628200056/hungryram/desktop2_igppbt.jpg)no-repeat center;background-size:cover" uk-height-viewport="offset-bottom: 55">
     <div class="uk-position-top full-nav-wrapper">
         {{ partial "global/navbar" . }}
@@ -10,6 +30,7 @@
     {{ partial "templates/breadcrumbs" . }}
     </div>
 </div>
+{{ end }}
 <main>
 {{ block "main" . }}
 
