--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -9,7 +9,7 @@
             <h1 class="uk-text-bold heading uk-margin-remove uk-white uk-h2" style="color: #fff;">{{ $hero.heading }}</h1>
             {{ end }}
             {{ if $hero.heading }}
-            <h2 class="uk-text-default uk-white">{{ $hero.body }}</h2>
+            <p class="uk-text-default uk-white">{{ $hero.body }}</p>
             {{ end }}
             <a href="#modal-signup" class="uk-button-primary uk-button" uk-toggle>Learn more</a>
         </div>
