--- a/layouts/partials/global/head.html
+++ b/layouts/partials/global/head.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {{ if .Params.noindex }}
+    <meta name="robots" content="noindex, nofollow" />
+    {{ else }}
+    <meta name="robots" content="index, follow" />
+    {{ end }}
+
     <link rel="stylesheet" href="{{.Site.BaseURL}}css/styles.min.css">
     <link rel="alternate" href="{{ .Permalink }}" hreflang="en-us" />
     <link rel="alternate" href="{{ .Permalink }}" hreflang="x-default" />
